force-app/main/default/objects/R360_Notification__c/R360_Notification__c.object-meta.xml
<CustomObject>
    <description>In-product Resource 360 action and escalation notification.</description>
    <label>Resource 360 Notification</label>
    <nameField>
        <displayFormat>NTF-{00000}</displayFormat>
        <label>Notification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource 360 Notifications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>