force-app/main/default/objects/R360_Notification__c/fields/Accountable_Owner__c.field-meta.xml
<CustomField><fullName>Accountable_Owner__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Accountable Owner</label><referenceTo>User</referenceTo><relationshipLabel>Owned Resource360 Alerts</relationshipLabel><relationshipName>Owned_Resource360_Alerts</relationshipName><required>false</required><trackHistory>true</trackHistory><type>Lookup</type></CustomField>