force-app/main/default/objects/R360_Notification__c/fields/Closed_At__c.field-meta.xml
<CustomField><fullName>Closed_At__c</fullName><label>Closed At</label><required>false</required><trackHistory>false</trackHistory><type>DateTime</type></CustomField>