force-app/main/default/objects/R360_Notification__c/fields/Closed_By__c.field-meta.xml
<CustomField><fullName>Closed_By__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Closed By</label><referenceTo>User</referenceTo><relationshipLabel>Closed Resource360 Alerts</relationshipLabel><relationshipName>Closed_Resource360_Alerts</relationshipName><required>false</required><trackHistory>false</trackHistory><type>Lookup</type></CustomField>