force-app/main/default/objects/R360_Notification__c/fields/Closure_Note__c.field-meta.xml
<CustomField><fullName>Closure_Note__c</fullName><label>Closure Note</label><length>2000</length><trackHistory>false</trackHistory><type>LongTextArea</type><visibleLines>4</visibleLines></CustomField>