force-app/main/default/objects/R360_Notification__c/fields/Deep_Link__c.field-meta.xml
<CustomField>
    <fullName>Deep_Link__c</fullName>
    <label>Deep Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>