force-app/main/default/objects/R360_Notification__c/fields/First_Seen_At__c.field-meta.xml
<CustomField><fullName>First_Seen_At__c</fullName><label>First Seen At</label><required>false</required><trackHistory>false</trackHistory><type>DateTime</type></CustomField>