force-app/main/default/objects/R360_Notification__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Resource 360 Notifications</relationshipLabel>
    <relationshipName>Resource360_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>