force-app/main/default/objects/R360_Notification__c/fields/Resolution_Status__c.field-meta.xml
<CustomField><fullName>Resolution_Status__c</fullName><label>Resolution Status</label><required>true</required><trackHistory>true</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Open</fullName><default>true</default><label>Open</label></value><value><fullName>Closed</fullName><default>false</default><label>Closed</label></value></valueSetDefinition></valueSet></CustomField>